<resources>
    <string name="app_name">雅骏</string>
    <string name="password">密码</string>
    <string name="auto_login">"自动登录"</string>
    <string name="rem_pass">"记住密码"</string>
    <string name="forget_pass">忘记密码</string>
    <string name="hello">您好</string>
    <string name="date">日期</string>
    <string name="weather_picture">"天气图片"</string>
    <string name="this_month_attendence">本月出勤</string>
    <string name="count">次</string>
    <string name="this_month_sign">本月签到</string>
    <string name="sign">签到</string>
    <string name="history_data">历史数据</string>
    <string name="repair_register">维修登记</string>
    <string name="tech_support">技术支持</string>
    <string name="personal">个人中心</string>
    <string name="sunny">"晴"</string>
    <string name="partly_cloudy1">"多云"</string>
    <string name="partly_cloudy2">"少云"</string>
    <string name="partly_cloudy3">"晴间多云"</string>
    <string name="cloudy_day">"阴"</string>
    <string name="shower1">"阵雨"</string>
    <string name="shower2">"强阵雨"</string>
    <string name="thunderstorms1">"雷阵雨"</string>
    <string name="thunderstorms2">"强雷阵雨"</string>
    <string name="light_rain1">"小雨"</string>
    <string name="light_rain2">"毛毛雨/细雨"</string>
    <string name="medium_rain">"中雨"</string>
    <string name="heavy_rain1">"大雨"</string>
    <string name="heavy_rain2">"极端降雨"</string>
    <string name="thunderstorms_hail">"雷阵雨伴有冰雹"</string>
    <string name="rainstorm">"暴雨"</string>
    <string name="sleet">"冻雨"</string>
    <string name="light_snow">"小雪"</string>
    <string name="medium_snow">"中雪"</string>
    <string name="heavy_snow">"大雪"</string>
    <string name="blizzard">"暴雪"</string>
    <string name="fog1">"雾"</string>
    <string name="fog2">"薄雾"</string>
    <string name="dust">"浮尘"</string>
    <string name="heavy_sandstorm">"强沙尘暴"</string>
    <string name="snow_shower">"阵雪"</string>
    <string name="dust_fly">"扬沙"</string>
    <string name="haze">"霾"</string>
    <string name="heavy_rainstorm">"大暴雨"</string>
    <string name="rain_snow1">"雨夹雪"</string>
    <string name="rain_snow2">"雨雪天气"</string>
    <string name="rain_snow3">"阵雨夹雪"</string>
    <string name="sandstorm">"沙尘暴"</string>
    <string name="zhjj">"张家界"</string>
    <string name="zhjk">"张家口"</string>
    <string name="aler">"阿拉尔"</string>
    <string name="alshm">"阿拉善盟"</string>
    <string name="loading_data">加载中...</string>
    <string name="cancel">取消</string>
    <string name="phone">028-66066606</string>
    <string name="dial">拨打</string>
    <string name="hint_password">密码由6~16位数字和字母组成</string>
    <string name="login">登录</string>
    <string name="double_click_exit">"双击返回键退出"</string>
    <string name="technology_center">雅俊技术中心</string>
    <string name="phone_permission_denied">拨打电话权限被禁止,无法拨打</string>
    <string name="jobid">工号</string>
</resources>
