<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/titlebar_color"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="31dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@mipmap/interfacecharacters_2x"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/hello"
                android:textColor="@color/text_color_wight"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/text_color_wight"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_wight"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_weather"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/weather_picture"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/main_radius"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/this_month_attendence"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/attendence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/text_yellow"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/count"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/main_radius"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/this_month_sign"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/text_yellow"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/count"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_sign"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@mipmap/theloginbutton_2x"
            android:text="@string/sign"
            android:textColor="@color/text_color_wight"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/wxbd"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/bg_light_gray"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/interfacebiblemaintenance_2x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/history_data"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wxdj"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/bg_light_gray"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/maininterfaceserviceregistration_2x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/repair_register"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/jszc"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/bg_light_gray"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/technicalsupporttothemaininterface_2x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/tech_support"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/grzx"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/bg_light_gray"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/interfaceofpersonalcenter_2x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/personal"
                    android:textColor="@color/text_color_wight"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

