<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:clear="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbackground_2x"
    android:padding="27dp">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="108dp"
            android:layout_height="85dp"
            android:layout_marginTop="37dp"
            android:src="@mipmap/loginlogo_2x" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:background="@mipmap/shouye_2x">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/loginworknumber_2x" />

                <com.small.test.appstub.widget.clearedittext.ClearEditText
                    android:id="@+id/jobId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:drawablePadding="8dp"
                    android:hint="@string/jobid"
                    android:textSize="15sp"
                    clear:clearButtonMode="whileEditing" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:background="@mipmap/shouye_2x">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/loginpassword_2x" />

                <com.small.test.appstub.widget.clearedittext.ClearEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textSize="15sp"
                    clear:clearButtonMode="whileEditing" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@mipmap/theloginbutton_2x"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/text_color_wight"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_login2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@mipmap/the_login_button_gray"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/text_color_wight"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/auto_login"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/rem_pass" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1">

        <TextView
            android:id="@+id/tv_fo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/forget_pass"
            android:textColor="@color/text_color_wight"
            android:textSize="11sp" />
    </RelativeLayout>

</RelativeLayout>